--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<title>NewProject</title>
 	<base href="/">
-
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- angular material icon -->
